Implemented support for quality values in Accept-Encoding.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>